// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SecureBackupPanel /> handles error fetching backup 1`] = `
<div>
  <div
    class="mx_SettingsSubsection_text"
  >
    Back up your encryption keys with your account data in case you lose access to your sessions. Your keys will be secured with a unique Recovery Key.
  </div>
  <div
    class="mx_SettingsSubsection_text"
  >
    Unable to load key backup status
  </div>
  <details>
    <summary
      class="mx_SecureBackupPanel_advanced"
    >
      Advanced
    </summary>
    <table
      class="mx_SecureBackupPanel_statusList"
    >
      <tr>
        <th
          scope="row"
        >
          Backup key stored:
        </th>
        <td>
          not stored
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Backup key cached:
        </th>
        <td>
          not found locally
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Secret storage public key:
        </th>
        <td>
          not found
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Secret storage:
        </th>
        <td>
          not ready
        </td>
      </tr>
    </table>
  </details>
</div>
`;

exports[`<SecureBackupPanel /> suggests connecting session to key backup when backup exists 1`] = `
<div>
  <div
    class="mx_SettingsSubsection_text"
  >
    Back up your encryption keys with your account data in case you lose access to your sessions. Your keys will be secured with a unique Recovery Key.
  </div>
  <div
    class="mx_SettingsSubsection_text"
  >
    <span>
      This session is 
      <strong>
        not backing up your keys
      </strong>
      , but you do have an existing backup you can restore from and add to going forward.
    </span>
  </div>
  <div
    class="mx_SettingsSubsection_text"
  >
    Connect this session to key backup before signing out to avoid losing any keys that may only be on this session.
  </div>
  <details>
    <summary
      class="mx_SecureBackupPanel_advanced"
    >
      Advanced
    </summary>
    <table
      class="mx_SecureBackupPanel_statusList"
    >
      <tr>
        <th
          scope="row"
        >
          Backup key stored:
        </th>
        <td>
          not stored
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Backup key cached:
        </th>
        <td>
          not found locally
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Secret storage public key:
        </th>
        <td>
          not found
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Secret storage:
        </th>
        <td>
          not ready
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Latest backup version on server:
        </th>
        <td>
          1
           (
          Algorithm:
           
          <code>
            test
          </code>
          )
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Active backup version:
        </th>
        <td>
          None
        </td>
      </tr>
    </table>
    <div />
  </details>
  <div
    class="mx_SecureBackupPanel_buttonRow"
  >
    <div
      class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
      role="button"
      tabindex="0"
    >
      Connect this session to Key Backup
    </div>
    <div
      class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_outline"
      role="button"
      tabindex="0"
    >
      Delete Backup
    </div>
  </div>
</div>
`;
